--- a/public/assignment/assignment4/views/user/templates/login.view.client.html
+++ b/public/assignment/assignment4/views/user/templates/login.view.client.html
@@ -1,8 +1,8 @@
 <div ng-include="'views/common/header-noSideBar.view.client.html'"></div>
 
 <div class="container-fluid">
-    <div ng-show="model.message"
-         class="alert alert-info">{{model.message}}
+    <div ng-show="model.error"
+         class="alert alert-danger">{{model.error}}
     </div>
     <form>
         <div class="form-group">
