--- a/public/assignment/assignment4/views/user/templates/profile.view.client.html
+++ b/public/assignment/assignment4/views/user/templates/profile.view.client.html
@@ -4,6 +4,9 @@
     <div ng-show="model.message"
          class="alert alert-info">{{model.message}}
     </div>
+    <div ng-show="model.error"
+         class="alert alert-danger">{{model.error}}
+    </div>
     <form>
         <div class="form-group">
             <label for="username">Username</label>
