--- a/public/assignment/assignment4/views/widget/editors/widget-image-edit.view.client.html
+++ b/public/assignment/assignment4/views/widget/editors/widget-image-edit.view.client.html
@@ -49,8 +49,7 @@
                ng-model="model.widget.url"
                id="URL"
                placeholder="http://"/>
-        <a class="btn btn-info btn-block"
-           href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId }}/widget/{{model.widgetId}}/search">
+        <a class="btn btn-info btn-block" ng-click="model.goSearchImg()">
             Search Image on Flickr</a>
     </div>
 
