--- a/public/assignment/assignment4/views/widget/templates/widget-youtube.view.client.html
+++ b/public/assignment/assignment4/views/widget/templates/widget-youtube.view.client.html
@@ -1,4 +1,4 @@
-<div style="width:{{widget.width}}; !important">
+<div ng-style="{width:widget.width}">
 <div class="video-container">
     <iframe src="{{model.getYouTubeEmbedUrl(widget.url)}}"
             frameborder="0"
