--- a/public/assignment/assignment4/views/website/templates/website-edit.view.client.html
+++ b/public/assignment/assignment4/views/website/templates/website-edit.view.client.html
@@ -9,11 +9,11 @@
                         <div class="col-sm-10">
                             Name
                         </div>
-                        <div class="col-sm-2">
-                        </div>
+                        <div class="col-sm-2"></div>
                     </div>
                 </li>
-                <li ng-repeat="website in model.websites" class="list-group-item">
+                <li ng-repeat="website in model.websites"
+                    class="list-group-item">
                     <div class="row">
                         <div class="col-sm-10">
                             <a href="#!/user/{{model.userId}}/website/{{website._id}}/page">
