--- a/public/assignment/assignment4/views/widget/templates/widget-flickr-search.view.client.html
+++ b/public/assignment/assignment4/views/widget/templates/widget-flickr-search.view.client.html
@@ -1,18 +1,25 @@
 <div ng-include="'views/common/header-noSideBar.view.client.html'"></div>
 <div class="container-fluid">
+    <div ng-show="model.error"
+         class="alert alert-danger">{{model.error}}
+    </div>
     <div class="input-group">
         <input ng-model="searchText"
                type="text"
                placeholder="Search images"
                class="form-control">
         <span class="input-group-btn">
-        <a ng-click="model.searchPhotos(searchText)" class="btn btn-default" type="button">
+        <a ng-click="model.searchPhotos(searchText)"
+           class="btn btn-default"
+           type="button">
             <span class="glyphicon glyphicon-search"></span>
         </a>
     </span>
     </div>
     <div class="row">
-        <div id="filckrImage" class="col-xs-6 col-sm-3 col-md-2 text-center" ng-repeat="photo in model.photos.photo">
+        <div id="filckrImage"
+             class="col-xs-6 col-sm-3 col-md-2 text-center"
+             ng-repeat="photo in model.photos.photo">
             <img ng-click="model.selectPhoto(photo)"
                  ng-src="https://farm{{photo.farm}}.staticflickr.com/{{photo.server}}/{{photo.id}}_{{photo.secret}}_q.jpg"/>
         </div>
