--- a/public/assignment/assignment5/views/website/templates/website-list.view.client.html
+++ b/public/assignment/assignment5/views/website/templates/website-list.view.client.html
@@ -20,7 +20,7 @@
             class="list-group-item">
             <div class="row">
                 <div class="col-md-4 col-sm-7 col-xs-10">
-                    <a href="#!/user/{{model.userId}}/website/{{website._id}}/page">
+                    <a href="#!/website/{{website._id}}/page">
                         {{website.name}}
                     </a>
                 </div>
@@ -31,7 +31,7 @@
                     {{website.accessed | date}}
                 </div>
                 <div class="col-xs-2">
-                    <a href="#!/user/{{model.userId}}/website/{{website._id}}">
+                    <a href="#!/website/{{website._id}}">
                         <span class="glyphicon glyphicon-cog pull-right"></span>
                     </a>
                 </div>
