--- a/public/project/testYummly/views/user/templates/profile.view.client.html
+++ b/public/project/testYummly/views/user/templates/profile.view.client.html
@@ -55,9 +55,9 @@
     <a class="btn btn-primary btn-block"
        ng-click="model.updateProfile()">Save</a>
     <a class="btn btn-success btn-block"
-       href="#!/website">Websites</a>
+       href="#!/user/{{model.userId}}/website">Websites</a>
     <a class="btn btn-danger btn-block"
-       ng-click="model.logout()">Logout</a>
+       href="#!/login">Logout</a>
     <a class="btn btn-warning btn-block"
        ng-click="model.deleteProfile()">Delete Account</a>
 </div>
