--- a/public/assignment/assignment5/views/page/templates/page-edit.view.client.html
+++ b/public/assignment/assignment5/views/page/templates/page-edit.view.client.html
@@ -18,12 +18,12 @@
                     class="list-group-item">
                     <div class="row">
                         <div class="col-sm-10">
-                            <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">
+                            <a href="#!/website/{{model.websiteId}}/page/{{page._id}}/widget">
                                 {{page.name}}
                             </a>
                         </div>
                         <div class="col-sm-2">
-                            <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}">
+                            <a href="#!/website/{{model.websiteId}}/page/{{page._id}}">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
