--- a/public/assignment/assignment5/views/website/templates/website-edit.view.client.html
+++ b/public/assignment/assignment5/views/website/templates/website-edit.view.client.html
@@ -16,12 +16,12 @@
                     class="list-group-item">
                     <div class="row">
                         <div class="col-sm-10">
-                            <a href="#!/user/{{model.userId}}/website/{{website._id}}/page">
+                            <a href="#!/website/{{website._id}}/page">
                                 {{website.name}}
                             </a>
                         </div>
                         <div class="col-sm-2">
-                            <a href="#!/user/{{model.userId}}/website/{{website._id}}">
+                            <a href="#!/website/{{website._id}}">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
