--- a/public/assignment/assignment5/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/widget-list.view.client.html
@@ -5,7 +5,7 @@
     <div ng-repeat="widget in model.widgets"
          class="wd-widget">
         <div class="wd-widget-toolbar">
-            <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
+            <a href="#!/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <span class="glyphicon glyphicon-align-justify"></span>
