encrypt function added

--- a/public/assignment/assignment5/views/user/templates/login.view.client.html
+++ b/public/assignment/assignment5/views/user/templates/login.view.client.html
@@ -8,6 +8,8 @@
         <div class="form-group">
             <label for="username">Username</label>
             <input id="username"
+                   autocorrect="off"
+                   autocapitalize="off"
                    type="text"
                    ng-model="model.user.username"
                    class="form-control"
