--- a/public/assignment/assignment5/views/home/home.html
+++ b/public/assignment/assignment5/views/home/home.html
@@ -18,7 +18,7 @@
          class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li class="active"><a href="">Home</a></li>
-            <li><a href="">Admin</a></li>
+            <li><a ng-if="model.currentUser.role === 'ADMIN'" href="#!/admin">Admin</a></li>
             <li ng-show="!model.userId"><a href="#!/login">Login</a></li>
             <li ng-show="!model.userId"><a href="#!/register">Register</a></li>
             <li ng-show="model.userId"><a href="#!/profile">Profile</a></li>
