--- a/public/assignment/assignment5/views/user/templates/login.view.client.html
+++ b/public/assignment/assignment5/views/user/templates/login.view.client.html
@@ -31,6 +31,11 @@
         <span class="fa fa-facebook"></span>
         Facebook
     </a>
+    <a href="/auth/google"
+       class="btn btn-danger btn-block">
+        <span class="fa fa-google-plus"></span>
+        Google
+    </a>
     <a class="btn btn-success btn-block"
        href="#!/register">Register</a>
 </div>
