--- a/public/assignment/assignment5/views/website/templates/website-new.view.client.html
+++ b/public/assignment/assignment5/views/website/templates/website-new.view.client.html
@@ -30,6 +30,9 @@
             </ul>
         </div>
         <div class="col-xs-12 col-sm-8">
+            <div ng-show="model.error"
+                 class="alert alert-danger">{{model.error}}
+            </div>
             <form>
                 <div class="form-group">
                     <label for="name">Name</label>
