add url to assignment 6

--- a/public/assignment/assignment5/views/common/footer.view.client.html
+++ b/public/assignment/assignment5/views/common/footer.view.client.html
@@ -8,7 +8,7 @@
                 </a>
             </div>
             <div class="col-xs-6 text-right">
-                <a href="#!/profile"
+                <a href="#!/user/{{model.userId}}"
                    ng-show="model.userId"
                    class="navbar-btn">
                     <span class="navigating-btn glyphicon glyphicon-user"></span>
