--- a/public/assignment/assignment5/views/page/templates/page-list.view.client.html
+++ b/public/assignment/assignment5/views/page/templates/page-list.view.client.html
@@ -22,7 +22,7 @@
             class="list-group-item">
             <div class="row">
                 <div class="col-md-4 col-sm-7 col-xs-10">
-                    <a href="#!/website/{{model.websiteId}}/page/{{page._id}}/widget">
+                    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">
                         {{page.name}}
                     </a>
                 </div>
@@ -33,7 +33,7 @@
                     {{page.accessed | date}}
                 </div>
                 <div class="col-xs-2">
-                    <a href="#!/website/{{model.websiteId}}/page/{{page._id}}">
+                    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}">
                         <span class="glyphicon glyphicon-cog pull-right"></span>
                     </a>
                 </div>
