--- a/public/assignment/assignment5/views/page/templates/page-new.view.client.html
+++ b/public/assignment/assignment5/views/page/templates/page-new.view.client.html
@@ -18,12 +18,12 @@
                     class="list-group-item">
                     <div class="row">
                         <div class="col-sm-10">
-                            <a href="#!/website/{{model.websiteId}}/page/{{page._id}}/widget">
+                            <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">
                                 {{page.name}}
                             </a>
                         </div>
                         <div class="col-sm-2">
-                            <a href="#!/website/{{model.websiteId}}/page/{{page._id}}">
+                            <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
@@ -32,9 +32,6 @@
             </ul>
         </div>
         <div class="col-xs-12 col-sm-8">
-            <div ng-show="model.error"
-                 class="alert alert-danger">{{model.error}}
-            </div>
             <form>
                 <div class="form-group">
                     <label for="name">Name</label>
@@ -52,7 +49,7 @@
                            placeholder="Page title"/>
                 </div>
             </form>
-            <a href="#!/website/{{model.websiteId}}/page"
+            <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page"
                class="btn btn-block btn-danger">Cancel</a>
         </div>
     </div>
