--- a/public/assignment/assignment5/views/website/templates/website-new.view.client.html
+++ b/public/assignment/assignment5/views/website/templates/website-new.view.client.html
@@ -16,12 +16,12 @@
                     class="list-group-item">
                     <div class="row">
                         <div class="col-sm-10">
-                            <a href="#!/website/{{website._id}}/page">
+                            <a href="#!/user/{{model.userId}}/website/{{website._id}}/page">
                                 {{website.name}}
                             </a>
                         </div>
                         <div class="col-sm-2">
-                            <a href="#!/website/{{website._id}}">
+                            <a href="#!/user/{{model.userId}}/website/{{website._id}}">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
@@ -30,9 +30,6 @@
             </ul>
         </div>
         <div class="col-xs-12 col-sm-8">
-            <div ng-show="model.error"
-                 class="alert alert-danger">{{model.error}}
-            </div>
             <form>
                 <div class="form-group">
                     <label for="name">Name</label>
@@ -50,7 +47,7 @@
                               class="form-control"></textarea>
                 </div>
             </form>
-            <a href="#!/website"
+            <a href="#!/user/{{model.userId}}/website"
                class="btn btn-block btn-danger">Cancel</a>
         </div>
     </div>
