--- a/public/assignment/assignment6/views/widget/editors/widget-text-edit.view.client.html
+++ b/public/assignment/assignment6/views/widget/editors/widget-text-edit.view.client.html
@@ -6,11 +6,11 @@
     </div>
 
     <div class="form-group">
-        <label for="username">Name</label>
+        <label for="name">Name</label>
         <input type="text"
                class="form-control"
                ng-model="model.widget.name"
-               id="username"
+               id="name"
                placeholder="widget name"/>
     </div>
 
